Set height of navbar to prevent covering others

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -3,6 +3,7 @@
 }
 
 div#navbar {
+  height: 41px;
   margin: 0px;
   margin-left: 1px;
   padding: 0px;
